updated data_processing nb

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -255,14 +255,59 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([10, 13, 10, 28, 25, 37, 35, 17, 35, 53, 26, 25, 12,  0, 52, 12, 15,\n       27, 17,  0, 54, 12, 12, 10, 28, 25, 37, 35, 17, 35, 53, 26, 25, 22,\n       10, 47, 27, 35, 47,  1, 52, 45, 13, 25, 27, 37,  2, 27, 37, 25])"
+      "text/plain": "(619, 2)"
      },
      "metadata": {},
      "execution_count": 5
     }
    ],
    "source": [
-    "utils.map_song(song)[:50]"
+    "song.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_pitches, song_durs = utils.map_song(song)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "((619,), (619,))"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "song_pitches.shape, song_durs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[ 2  2  2  5  5  7  7  3  7 10  5  5  2  0 10  2  3  5  3  0]\n[0 3 0 3 0 2 0 2 0 3 1 0 2 0 2 2 0 2 2 0]\n"
+    }
+   ],
+   "source": [
+    "print(song_pitches[:20])\n",
+    "print(song_durs[:20])"
    ]
   },
   {
@@ -274,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -282,7 +327,7 @@
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "100%|██████████| 3013/3013 [01:04<00:00, 46.51it/s]\n"
+     "text": "100%|██████████| 3013/3013 [00:19<00:00, 154.19it/s]\n"
     }
    ],
    "source": [
@@ -294,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,11 +348,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('processed_data/vectorized_classical_songs.npy', vec_songs)"
+    "np.save('processed_data/vectorized_classical_songs2.npy', vec_songs)"
    ]
   }
  ]
